# pi-templates

./: .gitmodules  README.md
cookiecutter-py/: cookiecutter.json
elm/src/: State.elm  Update.elm  View.elm  main.elm
go/: .gitignore  Makefile  template.toml
go/src/: {{ project }}.go
haskell/: .gitignore  template.toml  {{ project }}.cabal
haskell/test/: Spec.hs
idris/: Main.idr  template.toml  {{ project }}.ipkg
idris/{{ project }}/: Lib.idr
julia-lib/: REQUIRE
madlang-miso/: shake.hs  stack.yaml  template.toml  {{ project }}.cabal
madlang-miso/src/: Lib.hs
madlang-miso/web-src/: index.html
miso/: shake.hs  template.toml  {{ project }}.cabal
reco/: template.toml
rust-bin/: Cargo.toml  template.toml
rust-lib/: template.toml
yesod/: .gitignore  template.toml  {{ project }}.cabal
yesod/src/: Yesod.hs
yesod/web-src/hamlet/: index.hamlet
