name:                {{ project }}
version:             {{ version }}
-- synopsis:
-- description:
homepage:            https://github.com/{{ github_username }}/{{ project }}#readme
license:             {{ license }}
license-file:        LICENSE
author:              {{ name }}
maintainer:          {{ email }}
copyright:           Copyright: (c) {{ year }} {{ name }}
category:            Web
build-type:          Simple
extra-source-files:  README.md
                   , stack.yaml
                   , .travis.yml
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Foundation
  --other-modules:       Db.AcidState
  --                   , Backend
  build-depends:       base >= 4.7 && < 5
                     , yesod
                     , acid-state
  default-language:    Haskell2010
  default-extensions:  TypeFamilies
                     , OverloadedStrings

executable {{ project }}
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , {{ project }}
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/{{ github_username }}/{{ project }}
